<resources>
    <string name="app_name">Arte De Rua</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtn">Login</string>
    <string name="welcomeIntro">Welcome</string>
    <string name="continuar_conectado">Stay logged in</string>
    <string name="title_activity_main">Activity Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1463919503647427</string>
    <string name="fb_login_protocol_scheme">fb1463919503647427</string>
    <string name="action_logout">Logout</string>
    <string name="app_sub_logo">Fotografe e compartilhe</string>
    <string name="salveEvent">Save</string>
    <string name="register_foto_activity_title">Register photo</string>
    <string name="userTitleRegister">Title</string>
    <string name="userDescriptionRegister">Description</string>
    <string name="deletedEvent">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnEdit">Edit</string>
    <string name="BtnMap">Map</string>
    <string name="btnShare">Share</string>
    <string name="capture_photo">Capture photo</string>
    <string name="see_album">Map photos</string>
    <string name="about">About</string>
    <string name="see_more">See more</string>
    <string name="telDev">965886824</string>
    <string name="telDevLabel">tap and call me</string>
    <string name="devApp">Dev Jose Freire Pereira</string>
    <string name="no_data_available">Tap in buttom and record photo</string>
    <string name="user_location">You</string>
    <string name="user_validation">not valid</string>
    <string name="loginBtnRegister">Register</string>
    <string name="user_validation_have">This user already exists</string>
    <string name="BtnBtnRegister">Register</string>
    <string name="user_validation_empty_password"> Field "password" empty </string>
    <string name="user_validation_empty_user"> Field "user" empty </string>
</resources>
