<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogoEvent"
        android:layout_width="319dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_menu_camera"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <EditText
                android:textColor="#000"
                android:id="@+id/etitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userTitleRegister"
                android:inputType="text" />

            <EditText
                android:textColor="#000"
                android:id="@+id/etdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userDescriptionRegister"
                android:inputType="text" />

            <Button
                android:id="@+id/btnSalve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.21"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:text="@string/salveEvent" />


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.21"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:visibility="invisible"
            android:text="@string/deletedEvent" />

        </LinearLayout>

</LinearLayout>