<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_login"

    tools:context="com.essejose.artederua.AboutActivity">

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:background="@color/colorTransparent"
        android:ems="10"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textColor="#fff"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/colorTransparent"
        android:text="@string/app_sub_logo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignTop="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />


    <TextView
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/colorTransparent"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignTop="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />



    <TextView
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/colorTransparent"
        android:text="@string/telDevLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignTop="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />




    <TextView
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/colorTransparent"
        android:text="@string/telDev"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignTop="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />



</RelativeLayout>