<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogoEvent"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:cropToPadding="false"
            android:scaleType="centerCrop" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:id="@+id/tvTituloEvent"
                android:textColor="#000"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvdescriptionEvent"
                android:textColor="#555" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEdit"
                android:textSize="13dp"
                android:id="@+id/btnEdit"
                android:theme="@style/PrimaryFlatButton"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BtnMap"
                android:textSize="13dp"
                android:id="@+id/btnMap"
                android:theme="@style/PrimaryFlatButton"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnShare"
                android:id="@+id/btnShare"
                android:textSize="13dp"
                android:theme="@style/PrimaryFlatButton"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>